2015-01-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Allowed for import of very large XML files, resolves #63762 (thanks to Uwe Harnischmacher)
	* Released version 2.4.1, resolves #64283

2014-11-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.4.0, resolves #58038

2014-11-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added feature to preserve XML structure of imported values, resolves ##63012
	* Improved manual by adding scope in properties TOC

2014-08-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved performance of handled items check, resolves #60445 (thanks to Johannes Feustel)
	* Improved description of reference_uid property, resolves #60808
	* Released version 2.3.2, resolves #60823

2014-06-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured proper initialization of task list in Scheduler repository, resolves #59381
	* Corrected LaTeX setup for PDF rendering, resolves #59386
	* Corrected logic to avoid duplicate inserts when update is disabled, resolves #59609
	* Released version 2.3.1, resolves #59667

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.3.0, resolves #58038

2014-06-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed array integrity after pre-processor calls, resolves #56186
	* Added support for ###PID_IN_USE### marker in mapping where clause, resolves #56270
	* Added implementation of singleton class in sample user function, resolves #58399
	* Improved description of MM mappings, resolves #59214

2014-05-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed invalid use of "value" property in MM handling, resolves #59240
	* Formalized deprecation of old properties, resolves #59222

2014-05-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for one to many relations in mapping, resolves #52664

2014-05-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some CGL violations, resolves #51686
